[gd_scene load_steps=6 format=3 uid="uid://dbtfg3lnlg0mg"]

[ext_resource type="Script" path="res://Scripts/Teleporter.gd" id="1_fj81j"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dpe7g"]
height = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_i4wjn"]
size = Vector3(1.5, 0.1, 4.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_55de3"]
albedo_color = Color(0.25, 0.25, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_kg6gm"]
material = SubResource("StandardMaterial3D_55de3")
top_radius = 0.55
bottom_radius = 0.65
height = 0.1

[node name="Teleporter" type="Node3D"]
script = ExtResource("1_fj81j")

[node name="Teleporter_Area_01" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -6.55671e-08)
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Teleporter_Area_01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CylinderShape3D_dpe7g")

[node name="Teleporter_Area_02" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 6.55671e-08)
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Teleporter_Area_02"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CylinderShape3D_dpe7g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_i4wjn")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.5, 0.1, -6.55671e-08)
mesh = SubResource("CylinderMesh_kg6gm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.5, 0.1, 6.55671e-08)
mesh = SubResource("CylinderMesh_kg6gm")

[connection signal="body_entered" from="Teleporter_Area_01" to="." method="_on_body_entered_area1"]
[connection signal="body_exited" from="Teleporter_Area_01" to="." method="_on_body_exited_area1"]
[connection signal="body_entered" from="Teleporter_Area_02" to="." method="_on_body_entered_area2"]
[connection signal="body_exited" from="Teleporter_Area_02" to="." method="_on_body_exited_area2"]
